--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,8 @@
-streamlit>=1.38.0 # Original 1.31.0 (early 2024) is over a year old. Using a more recent version.
-pandas>=3.0.0     # Original 2.0.3 (June 2023). Pandas 3.0 (Apr 2024) is more current for Python 3.12.
-numpy>=2.0.0      # Original 1.24.3 (FAILS on Python 3.12). NumPy 2.0 (early-mid 2024) is needed for Python 3.12+ and modern ecosystem.
-scipy>=1.13.0     # Original 1.11.4. SciPy 1.12+ supports NumPy 2.0. Version 1.13 (Apr 2024) or newer recommended.
-matplotlib>=3.9.0 # Original 3.7.2. Matplotlib 3.9+ needed for NumPy 2.0 support.
-plotly>=5.20.0    # Original 5.18.0 (Nov 2023). A more recent minor version.
-openai>=1.25.0    # Original 1.12.0 (Feb 2024). The API and library evolve; using a more recent version is advisable.
+streamlit==1.32.0
+pandas==2.2.0
+numpy==1.26.4
+scipy==1.11.4
+plotly==5.18.0
+openai==1.14.2
+bcrypt==4.0.1
+tqdm==4.66.2
