--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
-streamlit==1.32.0
-pandas==2.2.0
-numpy==1.26.4
-scipy==1.11.4
+streamlit==1.30.0
+pandas==2.0.3
+numpy==1.24.3
+scikit-learn==1.3.0
+scipy==1.10.1
 plotly==5.18.0
 openai==1.14.2
 bcrypt==4.0.1
 tqdm==4.66.2
+httpx==0.27.0
+matplotlib==3.7.2
